Fix margin on mobile

--- a/themes/new-york-bakery/assets/css/custom.css
+++ b/themes/new-york-bakery/assets/css/custom.css
@@ -751,8 +751,10 @@ form { display: inline-block; }
 	.product-development-cards { display: none; }
 	.product-development-cards.mobile {
 		display: block;
-		margin-top: 10px;
+		margin-top: 0;
+		margin-bottom: 0;
 	}
+	.product-development-cards.mobile .product-development-single-card { padding: 20px 0; }
 	.product-development-cards.mobile i.icon:before { color: #000; }
 	.product-development-cards.mobile .product-development-icon {
 		display: block;
@@ -772,7 +774,10 @@ form { display: inline-block; }
 		padding-left: 0;
 	}
 	/*menu/burger icon on top menu*/
-	header #navbar-primary .menu-small-screen { padding-left: 15px !important; }
+	header #navbar-primary .menu-small-screen {
+		padding-left: 15px !important;
+		margin-right: 0;
+	}
 	/*search icon on top menu*/
 	.navbar-nav input[type="submit"] { top: 22px; }
 	.navbar-nav input[type="search"]:focus {
@@ -856,4 +861,9 @@ form { display: inline-block; }
 	/*About Us*/
 	.page-template-template-about #issues li { width: 225px; }
 	#issues { padding-left: 0; }
+	/*Banner*/
+	.banner-section .entry-title {
+		font-size: 2em !important;
+		word-wrap: break-word !important;
+	}
 }
